--- a/v3_admin/pubspec.yaml
+++ b/v3_admin/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   go_router: ^14.1.4
   provider: ^6.1.2
   animated_tree_view: ^2.2.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
