--- a/v3_admin/pubspec.yaml
+++ b/v3_admin/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   provider: ^6.1.2
   animated_tree_view: ^2.2.0
   image_picker: ^1.1.2
+  file_picker: ^8.0.5
 
 dev_dependencies:
   flutter_test:
